--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "crypto_dashboard",
   "version": "0.1.0",
-  "homepage": "https://manthankotadiya202.github.io/crypto_dashboard_2023",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
