--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "crypto_dashboard",
+  "name": "crypto_dashboard_2023",
+  "homepage": "https://manthankotadiya202.github.io/crypto_dashboard_2023",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
